Remove emoji from header title in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <h1>🏃 Sedentary Activity Tracker</h1>
+            <h1>Sedentary Activity Tracker</h1>
             <div class="connection-status" id="connectionStatus">
                 <span class="status-dot disconnected"></span>
                 <span id="connectionText">Connecting...</span>
